# WeMakeAPIPrediction

./: .gitignore  pyproject.toml
models/: risk_model.pkl
src/we_make_api_prediction/: main.py  seed_db.py
src/we_make_api_prediction/models/: risk_model.pkl
